--- a/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-warehouseInventory/maintenance-warehouseInventory.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/maintenance/maintenance-warehouseInventory/maintenance-warehouseInventory.css
@@ -36,8 +36,24 @@
   display: flex;
   flex-direction: column;
 }
-.maintenance-warehouseInventory-container h1 {
+.maintenance-aeronave-main {
+  width: 100%;
+  min-height: 95vh; 
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: white;
+  color: black;
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  border-radius: 10px;
+}
+.maintenance-warehouseInventory-container h2 {
   font-weight: bold;
+  padding-bottom: 10px;
+}
+.maintenance-warehouseInventory-header-principal {
+  font-size: 8px;
+  margin-left: 20px;
+  
 }
 .maintenance-warehouseInventory-filterContainer{
   display: flex;
