--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-management.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-management.css
@@ -37,6 +37,9 @@ tr:hover {
   color: red;
   font-size: 20px;
   margin-left: 15px;
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
 }
 
 .pilot-management-goback-arrow{
@@ -48,15 +51,41 @@ margin-right: 50px;
 display: flex;
 align-items: center;
 justify-content: center;
-font-size: 10px;
+border-radius: 8px;
+border: 1px solid #000000;
+background-color: #ffffff;
+padding: 10px 20px;
+color: #000000;
+box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
+margin-left: 10px;
 }
 
 .pilot-management-add-button-icon{
-margin-right: 5px;
+margin-right: 0px;
 font-size: 20px;
+color: #000000;
+}
+
+.pilot-user-info-container {
+  display: flex;
+  align-items: center;
+}
+
+.username {
+  /* Estilos existentes */
+  margin-left: 30px; /* Ajusta el valor según lo necesites */
+  font-size: 22px;
+  
+}
+
+.forma {
+  /* Estilos existentes */
+  font-size: 5px;
+  border-radius: 50%;
+  margin-left: 20px;
+  margin-right: auto;
 }
 
 .pilot-management-logo{
-display: flex;
-justify-content: flex-end;
+  margin-right: 50px;
 }
