--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-register.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/pilot-management/pilot-register.css
@@ -71,8 +71,27 @@
   font-size: 15px;
 }
 
-.register-pilot-logo{
+.pilot-user-info-container {
   display: flex;
-  justify-content: flex-end;
+  align-items: center;
+}
+
+.username {
+  /* Estilos existentes */
+  margin-left: 30px; /* Ajusta el valor según lo necesites */
+  font-size: 22px;
+  
+}
+
+.forma {
+  /* Estilos existentes */
+  font-size: 5px;
+  border-radius: 50%;
+  margin-left: 20px;
+  margin-right: auto;
+}
+
+.register-pilot-logo{
+  margin-right: 50px;
 }
 
