--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/search-bar-styles.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/search-bar-styles.css
@@ -1,8 +1,8 @@
-.search-bar {
+.sar-search-bar {
     display: flex;
 }
 
-.search-bar-item {
+.sar-search-bar-item {
     display: flex;
     align-items: center;
     background-color: #fff;
@@ -13,7 +13,7 @@
     margin: 5px;
 }
   
-.search-input {
+.sar-search-input {
     border: none;
     outline: none;
     padding: 5px;
@@ -23,7 +23,7 @@
     -webkit-appearance: none;
 }
 
-.search-button {
+.sar-search-button {
     height: 100%;  
     background-color: #090808;
     border: none;
@@ -35,7 +35,7 @@
     border-radius: 0 8px 8px 0;
 }
 
-.search-button:hover{
+.sar-search-button:hover{
     background-color: #2a2a2a;
     color: #eeeeee;
 }
