Correcciones en vistas de chequeo medico y menu de Operaciones

--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/operations-menu/operations-menu.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/operations-menu/operations-menu.css
@@ -7,6 +7,14 @@
     color: #000;
 }
 
+.box-operations1 {
+    transition: opacity 0.6s ease;
+}
+
+.container-operations1:hover > :not(:hover){
+    opacity: 0.4;
+}
+
 .operations-menu-container header {
     display: flex;
     width: 100%;
