--- a/CB-24-Proyecto-FAB-Frontend/src/components/operations/medical-check/mc_list.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/operations/medical-check/mc_list.css
@@ -1,19 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
-}
-
-html {
-    width: 100%;
-    height: 100%;
-}
-
-body {
-    min-height: 100vh;
-}
-
 /* Container */
 .container-list {
     margin: 2%;
@@ -165,3 +149,25 @@ tbody>tr:hover {
 .mc-footer-user-list a {
     text-decoration: none;
 }
+
+.mc-edit{
+    color: blue;
+    font-size: 20px;
+    margin-left: 15px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+  
+  .mc-delete{
+    color: red;
+    font-size: 20px;
+    margin-left: 15px;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+  }
+
+  .mc-black{
+    color: #000;
+  }
