--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/recruitment_Information/recruitment_Information.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/recruitment_Information/recruitment_Information.css
@@ -136,8 +136,8 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
     width: 60%;
+    padding: 40px;
     /* Ancho del 100% de la pantalla */
     height: 60%;
     /* Altura del 100% de la pantalla */
@@ -169,7 +169,8 @@
 }
 
 .Recrutment_Info_value {
-    margin-left: 10px;
+    margin-left: 1px;
+    margin-right: 20px;
 }
 
 .Recrutment_Info_btnRed {
