--- a/CB-24-Proyecto-FAB-Frontend/src/components/sar/sanidad_tratamiento/sanidad_tratamiento.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/sar/sanidad_tratamiento/sanidad_tratamiento.css
@@ -1,171 +1,124 @@
-.create_operations_header {
+.sanidad_tratamiento-container {
     display: flex;
+    flex-direction: column;
+    align-items: flex-start; 
+    padding: 20px;
+    background-color: #ffffff;
+    min-height: 100vh;
+    width: 100%;
+}
+
+.sanidad_tratamiento-container h3 {
+    color: #000000;
+    margin-bottom: 1rem;
+    font-size: 1.2rem;
+    width: 100%;
+}
+
+.sanidad_tratamiento-content {
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    width: 100%;
+    margin-top: 20px;
 }
 
-.create_operations_btnReturn {
-    background-color: transparent; 
-    border: none; 
-    margin-right: 10px; 
-    font-size: 45px; 
-    padding: 5px 10px; 
-}
-
-.create_operations_btnReturn:hover {
-    transform: scale(1.2);
-}
-
-.create_operations_header_h2 {
-    margin-right: 10px; 
-}
-
-.create_operations_body {
-    background-color: rgba(196, 193, 193, 0.7); /* Fondo oscuro con opacidad del 70% */
-    padding: 20px; /* Ajusta el espaciado interior según sea necesario */
-    
-}
-
-.create_operations_Info_FileOne {
-    display: flex;
-    justify-content: space-between; /* Distribuye los elementos a lo largo del contenedor */
-    width: 100%; /* Ocupa todo el ancho disponible */
-}
-
-.create_operations_Info_FileOne button {
-    flex: 1; /* Hace que los botones ocupen todo el espacio disponible */
-    padding: 10px;
-    margin: 10px;
-}
-
-.create_operations_Info_FileOne label {
-    font-weight: bold;
-    width: 30%;
-    margin-left: 25px;
-}
-
-.create_operations_Info_FileOne select,
-.create_operations_Info_FileOne input[type="date"] {
-    padding: 10px; /* Aumenta el relleno para hacerlos más grandes */
-    border: 1px solid #ccc; /* Añade un borde */
-    border-radius: 5px; /* Añade esquinas redondeadas */
-    font-size: 16px; /* Ajusta el tamaño de la fuente */
-    width: 100%; /* Ocupa todo el ancho disponible */
-    margin: 15px;
-}
-
-/* Estilo adicional para el selector */
-.create_operations_Info_FileOne select {
-    appearance: none; /* Oculta el estilo de selección predeterminado */
-    background-image: url('data:image/svg+xml;utf8,<svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>'); /* Añade una flecha personalizada */
-    background-position: right 10px top 50%; /* Posición de la flecha */
-    background-size: 12px; /* Tamaño de la flecha */
-    background-repeat: no-repeat; /* Evita la repetición de la flecha */
-    width: 70%;
-}
-
-/* Estilo adicional para el campo de fecha */
-.create_operations_Info_FileOne input[type="date"] {
-    appearance: none; /* Oculta el estilo predeterminado del campo de fecha */
-}
-.create_operations_Info_FileOne .create_operations_label {
-    display: block;
-    width: 30%;
-    margin-bottom: 5px;
-    margin-left: 25px;
-}
-
-.create_operations_Info_FileOne input[type="text"] {
-    width: 50%;
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    box-sizing: border-box;
-    margin-right: 50%;
-}
-
-.create_operations_Info_FileOne input[type="time"] {
-    padding: 10px; /* Aumenta el relleno para hacerlos más grandes */
-    border: 1px solid #ccc; /* Añade un borde */
-    border-radius: 5px; /* Añade esquinas redondeadas */
-    font-size: 16px; /* Ajusta el tamaño de la fuente */
-    width: 100%; /* Ocupa todo el ancho disponible */
-    margin: 15px;
-}
-
-.create_operations_Info_FileOne_center {
-    display: flex;
-    align-items: center; /* Centra verticalmente los elementos */
-    justify-content: center; /* Centra horizontalmente los elementos */
-    width: 100%; /* Ocupa todo el ancho disponible */
-}
-
-.create_operations_Info_FileOne_center select {
-    appearance: none; /* Oculta el estilo de selección predeterminado */
-    background-image: url('data:image/svg+xml;utf8,<svg fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"></path></svg>'); /* Añade una flecha personalizada */
-    background-position: right 10px top 50%; /* Posición de la flecha */
-    background-size: 12px; /* Tamaño de la flecha */
-    background-repeat: no-repeat; /* Evita la repetición de la flecha */
-    padding: 10px; /* Aumenta el relleno para hacerlos más grandes */
-    border: 1px solid #ccc; /* Añade un borde */
-    border-radius: 5px; /* Añade esquinas redondeadas */
-    font-size: 16px; /* Ajusta el tamaño de la fuente */
-    width: 50%; /* Ocupa todo el ancho disponible */
-    margin: 15px;
-    margin-left: 10px; /* Reduce el margen izquierdo */
-}
-
-.create_operations_Info_FileOne_center label {
-    font-weight: bold;
-    width: 100px;
-}
-
-.create_operations_listbtnAgregar {
-    border-radius: 10px;
-    border: 2px solid black; /* Borde más grueso y de color negro */
-    padding: 1px; /* Espaciado interno */
-    margin: 1px auto;
-    color: #171A4A;
-    font-size: 44px; /* Tamaño de la letra del signo más (+) */
-    background-color: transparent; /* Fondo transparente */
-    width: 50px;
-    height: 50px;
-    line-height: 40px; /* Centra el texto verticalmente */
-    text-align: center; /* Centra el texto horizontalmente */
-    margin-right: 30%;
-  }
-  
-  .create_operations_listbtnAgregar:hover {
-    background-color: #007bff; /* Cambia el color de fondo al pasar el cursor */
-    color: white; /* Cambia el color del texto al pasar el cursor */
-  }
-  .create_operations_Info_FileOne_center .centerlabel {
-    font-weight: bold;
-    width: 100px;
-    margin-left: 20%;
-}
-.create_operations_btnRegistrar{
-    
-    padding: 10px;
-    margin: 10px;
-    width: 40%;
-}
-
-.operations_table {
-    width: 80%; /* Ocupa todo el ancho disponible */
-    border-collapse: collapse; /* Combina los bordes de las celdas */
+.sanidad_tratamiento-form {
+    width: 100%;
+    max-width: 800px;
     margin-bottom: 20px;
 }
 
-.operations_table th, .operations_table td {
-    border: 1px solid #ddd; /* Borde de las celdas */
-    padding: 8px; /* Espaciado interno */
-    text-align: left; /* Alineación del texto a la izquierda */
-    background-color:white;
+.sanidad_tratamiento-form .form-group-row {
+    display: flex;
+    gap: 1rem;
+    width: 100%;
+    align-items: center;
 }
 
-.operations_table th {
-    background-color: #171A4A; /* Color de fondo del encabezado */
-    color: white;
-    text-align: center;
+.sanidad_tratamiento-form .form-group {
+    flex: 1;
 }
+
+.sanidad_tratamiento-form input[type="text"],
+.sanidad_tratamiento-form select {
+    padding: 0.5rem;
+    border: 1.5px solid #333;
+    border-radius: 5px;
+    font-size: 1rem;
+    width: 100%;
+    box-sizing: border-box;
+    height: 50px;
+}
+
+.sanidad_tratamiento-btnAgregar{
+    margin: 0;
+    padding: 0;
+    border: none;
+    border-radius: 5px;
+    background-color: #24365C;
+    color: #fff;
+    font-size: 1.5rem;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 50px;
+    width: 150px;
+   
+    
+}
+
+.sanidad_tratamiento-btnAgregar:hover {
+    background-color: #405279;
+}
+
+
+.sanidad_tratamiento-table {
+    width: 100%;
+    max-width: 800px;
+    border-collapse: collapse;
+    background-color: #171A4A;
+    border-radius: 7px;
+    overflow: hidden;
+}
+
+.sanidad_tratamiento-table th,
+.sanidad_tratamiento-table td {
+    padding: 0.75rem;
+    text-align: left;
+    color: #fff;
+}
+
+.sanidad_tratamiento-table th {
+    background-color: #171A4A;
+    font-weight: bold;
+}
+
+.sanidad_tratamiento-table tbody tr {
+    background-color: #24365C;
+}
+
+.sanidad_tratamiento-table tbody tr:nth-child(even) {
+    background-color: #1A2C48;
+}
+
+.sanidad_tratamiento-table tbody tr:hover {
+    background-color: #2C4878;
+}
+
+.sanidad_tratamiento-icon-button {
+    background: none;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    margin: 0;
+    color: #fff;
+    font-size: 1.5rem;
+}
+
+.sanidad_tratamiento-icon-button:hover {
+    color: #ccc;
+}
+
+
