--- a/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/riskMatrix.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/riskMatrix.css
@@ -111,3 +111,9 @@
     justify-content: center;
     align-items: center;
 }
+.btn-submit-requeriments {
+    text-decoration: none; 
+}
+.mr-link{
+    text-decoration: none;
+}
