--- a/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/OperationsLayout.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/OperationsLayout.css
@@ -17,3 +17,12 @@
     margin: 3vh;
     border-radius: 20px;
 }
+.logo-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.logoSarFab{
+    margin-right: 4rem;
+}
