--- a/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/OperationsView.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/OperationsView.css
@@ -8,13 +8,31 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
 }
+.ActiveOperations{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 7rem;
+    height: 5rem;
+}
 .newOperationSection .btnNewOperation{
     background-color: #171A4A;
     border-radius: 15px;
+    margin-left: 4.5rem;
+    width: 5rem;
+    height: 5rem;
     justify-self: start;
-
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .plus{
+    color: white;
+}
+.new_icon{
+    width: 3rem;
+    height: auto;
+    padding: 1rem;
     color: white;
 }
 .newOperationSection .ActiveOperations{
@@ -23,6 +41,7 @@
     justify-self: end;
 }
 .ActiveOperations h1,h4{
+    text-align: center;
     color: white;
 }
 .newOperationSection div{
@@ -35,4 +54,15 @@
     width: 900px;
     justify-self: center; 
     margin: 1em;
+    padding: 1rem;
+    text-align: center;
+}
+
+td{
+    padding: 1rem;
+}
+.operation_register:hover{
+    cursor:pointer;
+    background-color: #42404093;
+    transform: scale(1.05);
 }
