--- a/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/riskMatrix.css
+++ b/CB-24-Proyecto-FAB-Frontend/src/components/Operations2/riskMatrix.css
@@ -117,3 +117,63 @@
 .mr-link{
     text-decoration: none;
 }
+
+.ratio-title{
+    height: 40px;
+    width: 280px;
+    border-radius: 7px;
+    background-color: #000033;
+    display: grid;
+}
+.btnsCategories p{
+    color: white;
+    text-align: center;
+    font-size: 17px;
+    margin-bottom: 10px;
+    margin-top: 7px;
+}
+#inputStudy:checked ~ div p{
+    color: black;
+}
+
+#inputStudy:checked ~ .ratio-title{
+    border: solid black 2px !important;
+    background-color: white;
+}
+
+
+
+
+
+
+
+
+#inputStudy:hover ~ div p{
+    color: black;
+}
+
+#inputStudy:hover ~ .ratio-title{
+    border: solid black 2px !important;
+    background-color: white;
+}
+
+
+
+.form-check-input{
+    position: absolute;
+    /* width: 100%; */
+    height: 50px;
+    margin: 0;
+    cursor: pointer;
+    z-index: 2;
+    opacity: 0;
+}
+.form-group select{
+    height: 5vh;
+}
+.btnSmall{
+    width: 190px;
+}
+.btnSmaller{
+    width: 100px;
+}
